# UWB_Odom_Fusion

./: .gitmodules  nodeframe0.txt  trans.py  uwb.sh
UWB_Fusion/: run.py  traj_vis.rviz
UWB_Fusion/data/: part.bag
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish  setup.sh
devel/include/nlink_parser/: IotFrame0.h  IotFrame0Node.h  LinktrackAnchorframe0.h  LinktrackAoaNode0.h  LinktrackAoaNodeframe0.h  LinktrackNode0.h  LinktrackNode1.h  LinktrackNode2.h  LinktrackNode4Anchor.h  LinktrackNode4Tag.h  LinktrackNode5.h  LinktrackNode6.h  LinktrackNodeframe0.h  LinktrackNodeframe1.h  LinktrackNodeframe2.h  LinktrackNodeframe3.h  LinktrackNodeframe4.h  LinktrackNodeframe5.h  LinktrackNodeframe6.h  LinktrackTag.h  LinktrackTagframe0.h  TofsenseCascade.h  TofsenseFrame0.h  TofsenseMFrame0.h  TofsenseMFrame0Pixel.h
devel/lib/distance/: uwb_matrix_generator_by  uwb_matrix_ros  uwb_matrix_ros_new  uwb_matrix_ros_tx  uwb_matrix_uart
devel/lib/nlink_parser/: iot  linktrack  linktrack_aoa  linktrack_rviz_converter  tofsense  tofsensem
fusion/: eval_1tra_val.sh  icp_change.py  icp_open3d.py  icp_p450.py  plot.py  start.sh  uwb_odom_P450.py  uwb_odom_P4501 copy.py  uwb_odom_P4501.py  uwb_odom_sliding.py
fusion/trajectories/: id2_uwb.tum  id3_odom.tum
fusion/trajectories_32/: id0_uwb.tum  id1_odom.tum  id3_odom.tum
fusion/trajectories_best/: id0_odom.tum  id0_uwb.tum  id1_odom.tum  id1_uwb.tum  id2_odom.tum  id2_uwb.tum  id3_odom.tum  id3_uwb.tum
rviz/: display.rviz
scripts/: UWB-Fusion_real.py  UWB-Fusion_real1.py  UWB-Fusion_test.py  UWB_Fusion_GH.py  online_align.py  run.py  test.py  uwb_experiments.xlsx  uwb_experiments1.xlsx
src/: readme.md
src/distance/: CMakeLists.txt  package.xml
src/distance/config/: display.rviz  uwb_display.rviz
src/distance/launch/: uwb_data.launch  uwb_distance_muti_data.launch  uwb_distance_single_data.launch
src/distance/scripts/: MDS_4_relative.py  MDS_5_relative_best.py
src/distance/src/: ros_matrix_generator.cpp  uwb_matrix_ros.cpp  uwb_matrix_ros_copy.cpp  uwb_matrix_ros_tx.cpp
src/fusion/: eval_1tra_val.sh  start.sh  uwb_odom_P450.py  uwb_odom_P4501.py  uwb_odom_sliding.py
src/uwb_smoother/: CMakeLists.txt  package.xml
src/uwb_smoother/launch/: smoother.launch
src/uwb_smoother/src/: distance_matrix_smoother.cpp  smoother.bat
(+58 files in other folders)
