<?xml version="1.0"?>
<package format="2">
  <name>distance</name>
  <version>0.0.1</version>
  <description>UWB distance matrix generator package</description>

  <maintainer email="gh@todo.todo">gh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nlink_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nlink_parser</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>nlink_parser</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
